[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bip-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.33",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.15",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "types-requests>=2.32",
]

[project.scripts]
bip-api = "bip_api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/bip_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
# B008: FastAPI's standard pattern uses `= Depends(...)` in defaults.
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
